infra/helm-charts/ingress/old_templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingest-ingress
  annotations:
    # specifically target NGINX ingress controller
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec: kkk
  rules:
    - host: api.ingest.testing.data.humancellatlas.org
      http:
        paths:
          - path: /
            pathType: ImplementationSpecific
            backend:
              service:
                name: ingest-core-service
                port:
                  number: 80
